syntax = "proto3";

package kh.dev.scott.movie.core.proto.data.item;

option java_multiple_files = true;
message RhbOutputDataItemMessage {
	int64 id = 1;
	string title = 2;
	string category = 3;
	string star = 4;
}